--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,8 +6,6 @@
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
 
-    <string name="action_settings">Settings</string>
-
     <string name="gallery_dialog_title">Select Picture</string>
     <string name="login_dialog_title">Setting up things</string>
     <string name="login_dialog_message">Please wait while we setup Notes for you…</string>
@@ -19,4 +17,13 @@
     <string name="fetch_data_dialog_message">Fetching data…</string>
 
     <string name="note_added_toast">Note added.</string>
+    <string name="login_error_toast">Please try again.</string>
+    <string name="invalid_time_toast">Invalid Time.</string>
+    <string name="delete_note_alert_message">Are you sure you want to delete this Note?</string>
+    <string name="take_a_note">Take a Note…</string>
+    <string name="dialog_select_day">Select day :</string>
+    <string name="dialog_select_time">Select Time :</string>
+    <string name="title_hint">Title</string>
+    <string name="default_time">Tomorrow, 8:00 am</string>
+    <string name="body_hint">Note</string>
 </resources>
