--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,27 +3,32 @@
     <string name="notes">Notes</string>
     <string name="reminders">Reminders</string>
 
-    <string name="navigation_drawer_open">Open navigation drawer</string>
-    <string name="navigation_drawer_close">Close navigation drawer</string>
-
-    <string name="gallery_dialog_title">Select Picture</string>
+    <!-- Strings related to SplashScreenActivity -->
     <string name="login_dialog_title">Setting up things</string>
     <string name="login_dialog_message">Please wait while we setup Notes for you…</string>
-
     <string name="error_dialog_title">Error encountered</string>
     <string name="error_dialog_message">Please try again later.</string>
-
-    <string name="upload_image_error">Error uploading image</string>
-    <string name="fetch_data_dialog_message">Fetching data…</string>
-
-    <string name="note_added_toast">Note added.</string>
     <string name="login_error_toast">Please try again.</string>
-    <string name="invalid_time_toast">Invalid Time.</string>
-    <string name="delete_note_alert_message">Are you sure you want to delete this Note?</string>
+
+    <!-- Strings related to HomeScreenActivity -->
+    <string name="navigation_drawer_open">Open navigation drawer</string>
+    <string name="navigation_drawer_close">Close navigation drawer</string>
+    <string name="fetch_data_dialog_message">Fetching data…</string>
     <string name="take_a_note">Take a Note…</string>
+
+    <!-- Strings related to NotesActivity -->
+    <string name="title_hint">Title</string>
+    <string name="body_hint">Note</string>
+
+    <!-- Strings related to spinner dialog -->
     <string name="dialog_select_day">Select day :</string>
     <string name="dialog_select_time">Select Time :</string>
-    <string name="title_hint">Title</string>
+    <string name="invalid_time_toast">Invalid Time.</string>
+
+    <!-- Other strings -->
     <string name="default_time">Tomorrow, 8:00 am</string>
-    <string name="body_hint">Note</string>
+    <string name="note_added">Note added.</string>
+    <string name="gallery_dialog_title">Select Picture</string>
+    <string name="upload_image_error">Error uploading image</string>
+    <string name="delete_note_alert_message">Are you sure you want to delete this Note?</string>
 </resources>
